# financial-transactions-api

./: .env.example  .gitignore  Dockerfile  README.md  api-routes.json  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/routes/: account_routes.py  balance_routes.py  transaction_routes.py
app/api/schemas/: account_schemas.py  balance_schemas.py  transaction_schemas.py
app/application/services/: cache_service.py  snapshot_service.py
app/application/use_cases/: create_transaction.py  get_balance.py  list_transactions.py
app/core/: config.py  dependencies.py  enums.py  exceptions.py
app/database/: db_connection.py
app/domain/entities/: account.py  balance_snapshot.py  transaction.py
app/domain/repositories/: account_repository.py  balance_snapshot_repository.py  transaction_repository.py
app/domain/services/: balance_calculator.py
app/domain/value_objects/: money.py
app/infrastructure/repositories/: account_repository.py  balance_snapshot_repository.py  transaction_repository.py
app/infrastructure/services/: redis_cache_service.py
app/models/: models.py
scripts/: load_test_data.py  run_tests.py  run_tests_docker.sh
tests/: README.md  conftest.py
tests/integration/: test_account_repository.py  test_api_endpoints.py
tests/unit/: test_account.py  test_balance_calculator.py  test_create_transaction_use_case.py  test_get_balance_use_case.py  test_money.py  test_transaction.py
